third_party/move/move-compiler-v2/tests/bytecode-generator/v1-commands/break_outside_loop_in_if.exp
// -- Model dump before first bytecode pipeline
module <SELF>_0 {
    private fun main() {
        if true {
          break
        } else {
          Tuple()
        }
    }
} // end <SELF>_0

// -- Sourcified model before first bytecode pipeline
script {
    fun main() {
        if (true) break
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/bytecode-generator/v1-commands/break_outside_loop_in_if.move:3:15
  │
3 │     if (true) break
  │               ^^^^^
